# intelligent_systems_engineering

./: .dockerignore  .gitignore  Dockerfile  README.md  data.dvc  docker-compose  predictions.sqlite  pyproject.toml
.dvc/: config
.github/workflows/: calculate-metrics.yml  client-ci-cd.yml  data-fetch.yml  main.yml  service-ci-cd.yml  train-model.yml
data/processed/: mbajk_dataset.csv  merged_data.csv  station_1.csv  station_10.csv  station_11.csv  station_12.csv  station_13.csv  station_14.csv  station_15.csv  station_16.csv  station_17.csv  station_18.csv  station_19.csv  station_2.csv  station_20.csv  station_21.csv  station_22.csv  station_23.csv  station_24.csv  station_25.csv  station_26.csv  station_27.csv  station_28.csv  station_29.csv  station_3.csv  station_4.csv  station_5.csv  station_6.csv  station_7.csv  station_8.csv  station_9.csv
data/raw/: mbajk_stations.csv  weather.csv
gx/: great_expectations.yml
gx/checkpoints/: mbajk_checkpoint.yml
gx/expectations/: .ge_store_backend_id  mbajk_suite.json
models/: mbajk_GRU.h5  mbajk_GRU.keras
models/mbajk_validation/: model.h5
models/station_1/: model.h5  model_latest.onnx
models/station_10/: model.h5  model_latest.onnx
models/station_11/: model.h5  model_latest.onnx
models/station_12/: model.h5  model_latest.onnx
models/station_13/: model.h5  model_latest.onnx
models/station_14/: model.h5  model_latest.onnx
models/station_15/: model.h5  model_latest.onnx
models/station_16/: model.h5  model_latest.onnx
models/station_17/: model.h5  model_latest.onnx
models/station_18/: model.h5  model_latest.onnx
models/station_19/: model.h5  model_latest.onnx
models/station_2/: model.h5  model_latest.onnx
models/station_20/: model.h5  model_latest.onnx
models/station_21/: model.h5  model_latest.onnx
models/station_22/: model.h5  model_latest.onnx
models/station_23/: model.h5  model_latest.onnx
models/station_24/: model.h5  model_latest.onnx
models/station_25/: model.h5  model_latest.onnx
models/station_26/: model.h5  model_latest.onnx
models/station_27/: model.h5  model_latest.onnx
models/station_28/: model.h5  model_latest.onnx
models/station_29/: model.h5  model_latest.onnx
models/station_3/: model.h5  model_latest.onnx  model_production.onnx
models/station_4/: model.h5  model_latest.onnx
models/station_5/: model.h5  model_latest.onnx
models/station_6/: model.h5  model_latest.onnx
models/station_7/: model.h5  model_latest.onnx
models/station_8/: model.h5  model_latest.onnx
models/station_9/: model.h5  model_latest.onnx
notebooks/: mbajk_dataset_preprocessing.ipynb  mbajk_train.ipynb
reports/: metrics.txt  train_metrics.txt
reports/sites/: data_drift.html  stability_tests.html
reports/station_1/: latest_metrics.txt  metrics.txt  production_metrics.txt  train_metrics.txt
reports/station_10/: latest_metrics.txt  metrics.txt  production_metrics.txt  train_metrics.txt
reports/station_11/: latest_metrics.txt  metrics.txt  production_metrics.txt  train_metrics.txt
reports/station_12/: latest_metrics.txt  metrics.txt  production_metrics.txt  train_metrics.txt
src/: config.py
src/data/: ks.py  (+5 more)
(+142 files in other folders)
