[tool.poetry]
name = "intelligent-systems-engineering"
version = "0.1.0"
description = ""
authors = ["sulcer <gregor.sulcer@student.um.si>"]
readme = "README.md"

[tool.poe.tasks]
serve = "uvicorn src.serve.app.main:app --reload"
fetch_data = "python3 -m src.data.fetch_data"
test = "pytest"
lint = "ruff check ."

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pytest = "^8.1.1"
jupyter = "^1.0.0"
numpy = "^1.26.4"
seaborn = "^0.13.2"
tensorflow = "^2.15.0.post1"
requests = "^2.31.0"
scipy = "^1.12.0"
poethepoet = "^0.25.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
